Fixed an issue where switching between Light Mode and Dark Mode was not supported

--- a/content.css
+++ b/content.css
@@ -4,7 +4,7 @@
 }
 
 span.filter-button {
-    background-color: var(--yt-spec-overlay-button-secondary);
+    background-color: var(--yt-spec-additive-background);
     color: var(--yt-spec-text-primary);
     fill: var(--yt-spec-text-primary);
     align-items: center;
